- Удалил полноэкранную рекламу.  - Добавил количество отсортированных постов сверху первого поста в PostsActivity(см. item_post.xml).  - Добавил верхний отступ для первого элемента в GroupsActivity.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -101,6 +101,14 @@
         <item quantity="many">%1$d просмотров</item>
         <item quantity="other">%1$d просмотр</item>
     </plurals>
+    <plurals name="posts">
+        <item quantity="zero">%1$d постов</item>
+        <item quantity="one">%1$d пост</item>
+        <item quantity="two">%1$d поста</item>
+        <item quantity="few">%1$d поста</item>
+        <item quantity="many">%1$d постов</item>
+        <item quantity="other">%1$d пост</item>
+    </plurals>
     
     <!-- Notification -->
     <string name="notification_title">Записи отсортированы</string>
