- Added ExpandableTextView to posts instead of regular TextView. - Has changed interval between 100 posts download from 0.3 seconds to 0.4 seconds so no errors occurs during download. - Added PreCachingLayoutManager which is used instead regular LinearLayoutManager in GroupsActivity and PostsActivity. - Changed names of classes and divided entities for download posts for a recyclerview and posts for sorting.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
         <item quantity="other">%1$d минута</item>
     </plurals>
 
-    <!-- Posts Screen -->
+    <!-- ExtendedPosts Screen -->
     <string name="sort_progress_dialog_title">Идет получение постов</string>
     <string name="please_wait">Пожалуйста, подождите&#8230;</string>
 
